# OPERATING_SYSTEMS

colloquia/Tasks/: CMakeLists.txt
colloquia/Tasks/task1/: main  main.c
colloquia/Tasks/task2/: main.c
colloquia/Tasks/task3/: main.c
colloquia/Tasks_0/: CMakeLists.txt
colloquia/Tasks_0/Task2/: main.c
colloquia/Tasks_0/task1/: main.c
colloquia/Tasks_0/task3/: main.c
colloquia/kolos1/zad1/: CMakeLists.txt  bibl1.c  bibl1.h  makefile  zad1.c
colloquia/kolos1/zad2/: CMakeLists.txt  makefile  signal_test  zad21.c
colloquia/kolos1/zad3/: CMakeLists.txt  makefile  zad3_nad.c  zad3_odb.c
colloquia/kolos_bielecki/: CMakeLists.txt
colloquia/kolos_bielecki/zad1/: main  main.c  makefile
colloquia/kolos_bielecki/zad2/: common.txt  main.c
colloquia/kolos_bielecki/zad3/: CMakeLists.txt  main  main.c
colloquia/kolos_jamroz/zad1/: main.c
colloquia/kolos_jamroz/zad2/: CMakeLists.txt  cli.c  srv.c
laboratories/cw01/zad1/: CMakeLists.txt  countdown  countdown.c
laboratories/cw02/zad1/: CMakeLists.txt  client.c  collatz.c  collatz.h  makefile
laboratories/cw03/zad1/: CMakeLists.txt  input.txt  main.c  makefile  pomiar_zad_2.txt  reverse.c  reverse.h
laboratories/cw03/zad2/: CMakeLists.txt  browse  main.c  makefile
laboratories/cw04/zad1/: CMakeLists.txt  main.c  makefile
laboratories/cw04/zad2/: main.c  makefile
laboratories/cw05/zad1/: main.c  makefile
laboratories/cw05/zad2/: CMakeLists.txt  makefile
laboratories/cw05/zad2/src/: catcher.c  mode.h  sender.c
laboratories/cw06/zad1/: main.c  makefile
laboratories/cw06/zad2/: CMakeLists.txt  makefile  pipe_specs.h  program1.c  program2.c
laboratories/cw07/zad1/: CMakeLists.txt  client.c  makefile  server.c
laboratories/cw08/zad1/: CMakeLists.txt  makefile  printers_system.c  user_simulator.c
laboratories/cw09/zad1/: CMakeLists.txt  grid.c  grid.h  life.c  makefile
laboratories/cw10/zad1/: main.c  makefile
laboratories/cw11/zad1/: CMakeLists.txt  client.c  common.h  makefile  server.c
laboratories/cw12/zad1/: CMakeLists.txt  client.c  makefile  server.c
