cmake_minimum_required(VERSION 3.22)
project(kolos_bielecki)

set(CMAKE_CXX_STANDARD 14)

add_executable(kolos_bielecki
        zad1/.idea/.gitignore
        zad1/.idea/misc.xml
        zad1/.idea/modules.xml
        zad1/.idea/workspace.xml
        zad1/.idea/zad1.iml
        zad1/cmake-build-debug/.cmake/api/v1/query/cache-v2
        zad1/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
        zad1/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
        zad1/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
        zad1/cmake-build-debug/.cmake/api/v1/reply/cache-v2-8d1496d5bb7c60df632c.json
        zad1/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-6ba6ed4f5d0dcf462e32.json
        zad1/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-b594a75f2fa945c4bad1.json
        zad1/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-f5ebdc15457944623624.json
        zad1/cmake-build-debug/.cmake/api/v1/reply/index-2024-06-12T10-37-44-0856.json
        zad1/cmake-build-debug/.cmake/api/v1/reply/target-zad1-Debug-8e6fd054f5eb55595f7b.json
        zad1/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-ab6bc179ddbddbdb0d31.json
        zad1/cmake-build-debug/Testing/Temporary/LastTest.log
        zad1/cmake-build-debug/cmake_install.cmake
        zad1/cmake-build-debug/CMakeCache.txt
        zad1/cmake-build-debug/Makefile
        zad1/cmake-build-debug/zad1.cbp
        zad1/CMakeLists.txt
        zad1/main.c
        zad1/makefile
        zad2/.idea/misc.xml
        zad2/.idea/modules.xml
        zad2/.idea/workspace.xml
        zad2/.idea/zad2.iml
        zad2/cmake-build-debug/.cmake/api/v1/query/cache-v2
        zad2/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
        zad2/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
        zad2/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
        zad2/cmake-build-debug/.cmake/api/v1/reply/cache-v2-5aa5a3dafc5a030bf4a8.json
        zad2/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-6ef71535ba9039baa268.json
        zad2/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-0b287793c6383b0886ca.json
        zad2/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-f5ebdc15457944623624.json
        zad2/cmake-build-debug/.cmake/api/v1/reply/index-2024-06-12T10-46-10-0769.json
        zad2/cmake-build-debug/.cmake/api/v1/reply/target-zad2-Debug-7b2a655aca5f657b758c.json
        zad2/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-ab6bc179ddbddbdb0d31.json
        zad2/cmake-build-debug/Testing/Temporary/LastTest.log
        zad2/cmake-build-debug/cmake_install.cmake
        zad2/cmake-build-debug/CMakeCache.txt
        zad2/cmake-build-debug/Makefile
        zad2/cmake-build-debug/zad2.cbp
        zad2/CMakeLists.txt
        zad2/main.c
        zad2/makefile
        zad3/.idea/misc.xml
        zad3/.idea/modules.xml
        zad3/.idea/workspace.xml
        zad3/.idea/zad3.iml
        zad3/cmake-build-debug/.cmake/api/v1/query/cache-v2
        zad3/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
        zad3/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
        zad3/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
        zad3/cmake-build-debug/.cmake/api/v1/reply/cache-v2-9815b2ac57798fa97c4d.json
        zad3/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-0394008fd74192502732.json
        zad3/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-f83f4400b2a42dcfaad0.json
        zad3/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-f5ebdc15457944623624.json
        zad3/cmake-build-debug/.cmake/api/v1/reply/index-2024-06-12T10-58-44-0014.json
        zad3/cmake-build-debug/.cmake/api/v1/reply/target-zad3-Debug-67e4028fee7797d67793.json
        zad3/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-ab6bc179ddbddbdb0d31.json
        zad3/cmake-build-debug/Testing/Temporary/LastTest.log
        zad3/cmake-build-debug/cmake_install.cmake
        zad3/cmake-build-debug/CMakeCache.txt
        zad3/cmake-build-debug/Makefile
        zad3/cmake-build-debug/zad3.cbp
        zad3/CMakeLists.txt
        zad3/main.c
        zad3/makefile)
